# Maths_TD2_Eigen

./: CMakeCache.txt  CMakeLists.txt  DualNumber.hpp  Makefile  cmake_install.cmake  main.cpp  poly
src/: Polynomial.cpp  main.cpp
